--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Azure SQL User Interface</title>
+    <link rel="icon" href="%PUBLIC_URL%/logo1.png" />
 </head>
 <body>
     <div id="root"></div>
